--- a/Blog/templates/index.phtml
+++ b/Blog/templates/index.phtml
@@ -2,20 +2,22 @@
 
 {foreach $articles AS $article}
 				<h3>{$article.titre}</h3>
+					<img src="img/{$article.titre}.jpg">
 					<p>{$article.texte}
 					
 					 </p>
-					 ecrit le : {$article.date}
+					 ecrit le : {$dateFR}
 					
 				{if ( $connecte )}
 					<br><br>
-					<a href="article.php?id=<?php echo $data['id']; ?>" class="btn btn-primary">Modifier</a>
-					<a href="supprimer-article.php?id=<?php echo $data['id']; ?>" class="btn btn-danger"> Supprimer</a>  
+					<a href="article.php?id={$article.id}" class="btn btn-primary">Modifier</a>
+					<a href="supprimer-article.php?id={$article.id}" class="btn btn-danger"> Supprimer</a>  
 				 
 				{/if}
 				
 				<hr>
 			{/foreach}
+{if $nb_pages gt 1}
 <div class="pagination" >
 	<ul>
 		<li class="prev {if $page<=1} disabled{/if}" >
@@ -33,6 +35,7 @@
 		</li>
 	</ul>
 </div>
+{/if}
 <script src='jquery.js'></script>
 <script>
 	$(function() {
