--- a/Blog/templates/index.phtml
+++ b/Blog/templates/index.phtml
@@ -2,7 +2,7 @@
 
 {foreach $articles AS $article}
 				<h3>{$article.titre}</h3>
-					<img src="img/{$article.titre}.jpg">
+					<img src="img/{$article.image}">
 					<p>{$article.texte}
 					
 					 </p>
@@ -52,3 +52,4 @@
     });
   });
 </script>
+
